Add base configuration

--- a/script/20200916/00_base/clp.conf
+++ b/script/20200916/00_base/clp.conf
@@ -11,7 +11,7 @@
   </cluster>
   <webmgr>
     <client>
-      <objectnumber>10</objectnumber>
+      <objectnumber>9</objectnumber>
     </client>
   </webmgr>
   <server name="ml8-224">
@@ -32,11 +32,11 @@
     <type>failover</type>
     <comment/>
     <gid>0</gid>
-    <resource name="exec@exec-mariadb"/>
+    <resource name="exec@exec"/>
   </group>
   <resource>
     <types name="exec"/>
-    <exec name="exec-mariadb">
+    <exec name="exec">
       <comment/>
       <parameters>
         <act>
@@ -57,24 +57,6 @@
         <name>LocalServer</name>
       </relation>
     </userw>
-    <types name="mysqlw"/>
-    <mysqlw name="mysqlw">
-      <comment/>
-      <target>exec-mariadb</target>
-      <relation>
-        <type>cls</type>
-        <name>LocalServer</name>
-      </relation>
-      <emergency>
-        <action>1</action>
-      </emergency>
-      <parameters>
-        <database>testdb</database>
-        <username>root</username>
-        <password>cluster-0</password>
-        <libraryfullpath>/usr/lib64/libmariadb.so.3</libraryfullpath>
-      </parameters>
-    </mysqlw>
   </monitor>
   <rstd>
     <use>1</use>
