Disable recovery action

--- a/script/20200916/01_mariadb/clp.conf
+++ b/script/20200916/01_mariadb/clp.conf
@@ -76,6 +76,21 @@
       </parameters>
     </mysqlw>
   </monitor>
+  <rc>
+    <errordetect>
+      <rscact>
+        <norecovery>1</norecovery>
+      </rscact>
+      <rscdeact>
+        <norecovery>1</norecovery>
+      </rscdeact>
+    </errordetect>
+  </rc>
+  <rm>
+    <errordetect>
+      <norecovery>1</norecovery>
+    </errordetect>
+  </rm>
   <rstd>
     <use>1</use>
   </rstd>
