--- a/script/20200916/02_mariadb_apache/clp.conf
+++ b/script/20200916/02_mariadb_apache/clp.conf
@@ -105,6 +105,21 @@
       </emergency>
     </httpw>
   </monitor>
+  <rc>
+    <errordetect>
+      <rscact>
+        <norecovery>1</norecovery>
+      </rscact>
+      <rscdeact>
+        <norecovery>1</norecovery>
+      </rscdeact>
+    </errordetect>
+  </rc>
+  <rm>
+    <errordetect>
+      <norecovery>1</norecovery>
+    </errordetect>
+  </rm>
   <rstd>
     <use>1</use>
   </rstd>
