Revise perl scripts

--- a/script/20200916/01_mariadb/clp.conf
+++ b/script/20200916/01_mariadb/clp.conf
@@ -61,11 +61,14 @@
       <comment/>
       <target>exec-mariadb</target>
       <relation>
-        <type>cls</type>
-        <name>LocalServer</name>
+        <type>rsc</type>
+        <name>exec-mariadb</name>
       </relation>
       <emergency>
         <action>1</action>
+        <threshold>
+          <restart>2</restart>
+        </threshold>
       </emergency>
       <parameters>
         <database>testdb</database>
@@ -73,6 +76,11 @@
         <password>cluster-0</password>
         <libraryfullpath>/usr/lib64/libmariadb.so.3</libraryfullpath>
       </parameters>
+      <polling>
+        <interval>30</interval>
+        <timeout>60</timeout>
+        <reconfirmation>1</reconfirmation>
+      </polling>
     </mysqlw>
   </monitor>
   <rc>
