--- a/script/20200916/02_mariadb_apache/clp.conf
+++ b/script/20200916/02_mariadb_apache/clp.conf
@@ -77,11 +77,14 @@
       <comment/>
       <target>exec-mariadb</target>
       <relation>
-        <type>cls</type>
-        <name>LocalServer</name>
+        <type>rsc</type>
+        <name>exec-mariadb</name>
       </relation>
       <emergency>
         <action>1</action>
+        <threshold>
+          <restart>2</restart>
+        </threshold>
       </emergency>
       <parameters>
         <database>testdb</database>
@@ -89,18 +92,31 @@
         <password>cluster-0</password>
         <libraryfullpath>/usr/lib64/libmariadb.so.3</libraryfullpath>
       </parameters>
+      <polling>
+        <interval>30</interval>
+        <timeout>60</timeout>
+        <reconfirmation>1</reconfirmation>
+      </polling>
     </mysqlw>
     <types name="httpw"/>
     <httpw name="httpw">
       <comment/>
       <target>exec-apache</target>
       <relation>
-        <type>cls</type>
-        <name>LocalServer</name>
+        <type>rsc</type>
+        <name>exec-apache</name>
       </relation>
       <emergency>
         <action>1</action>
+        <threshold>
+          <restart>2</restart>
+        </threshold>
       </emergency>
+      <polling>
+        <interval>30</interval>
+        <timeout>60</timeout>
+        <reconfirmation>1</reconfirmation>
+      </polling>
     </httpw>
   </monitor>
   <rc>
