--- a/script/20200916/02_mariadb_apache/clp.conf
+++ b/script/20200916/02_mariadb_apache/clp.conf
@@ -112,6 +112,10 @@
           <restart>2</restart>
         </threshold>
       </emergency>
+      <parameters>
+        <servername>localhost</servername>
+        <port>80</port>
+      </parameters>
       <polling>
         <interval>30</interval>
         <timeout>60</timeout>
